#53 spacing issue fixed
#53 spacing issue fixed. title issue pending it's developer issue

--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -22,3 +22,11 @@
     padding: 2px 3px;
     line-height: normal;
 }
+#TB_window .wp-user-profile-avatar-shortcode-wrap .nav-tab-wrapper {
+    margin-bottom: 10px !important;
+}
+@media (min-height:700px){
+    #TB_window, #TB_ajaxContent {
+        height: auto !important;
+    }
+}
